--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
